--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -8,6 +8,12 @@ font-family: Verdana, sans-serif
   font-size: 36px;
 }
 
-.impar font{
-  
+.font{
+  font-size: 24px;
+}
+
+#cuatro{
+  background: lightgreen;
+  font-size: 24px;
+  font-weight: bold;
 }
