--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,10 +1,10 @@
-.impar{
-background: lightpink;
-font-family: Verdana, sans-serif
+.odd{
+background: #ffb6c1;
+font-family: Verdana, "DejaVu Sans", sans-serif;
 }
 
-#dos{
-  color: blue;
+#two{
+  color: rgb(3, 116, 255);
   font-size: 36px;
 }
 
@@ -12,8 +12,8 @@ font-family: Verdana, sans-serif
   font-size: 24px;
 }
 
-#cuatro{
-  background: lightgreen;
+#four{
+  background: hsl(152, 100%, 51%);
   font-size: 24px;
   font-weight: bold;
 }
