--- a/margin-and-padding/01-margin-and-padding-1/style.css
+++ b/margin-and-padding/01-margin-and-padding-1/style.css
@@ -7,7 +7,7 @@ body {
   background: pink;
   border: 3px solid blue;
   /* CHANGE ME */
-  padding: 20px;
+  padding: 32px;
   margin: 12px;
 }
 
@@ -24,5 +24,5 @@ body {
   width: 200px;
   /* CHANGE ME */
   padding: 30px;
-  margin-left: 330px;
+  margin-left: auto;
 }
