feat: CSS exercises

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  
 }
 
 img {
@@ -10,6 +11,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -24,3 +27,18 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.images{
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+
+.text{
+  max-width: 200px;
+  text-wrap: balance ;
+  text-align: center;
+}
+
+
