--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,8 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -20,6 +22,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  margin: 5px 16px;
 }
 
 .logo {
@@ -34,7 +37,8 @@ button {
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
-  padding: 8px 24px;
+  padding: 10px 10px;
+  margin: 10px 16px;
 }
 
 a {
@@ -45,4 +49,12 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  padding: 0 16px;
+  gap: 8px;
+}
+
+.a, .b{
+  display: flex;
+  
 }
